--- a/about.html
+++ b/about.html
@@ -86,23 +86,23 @@
         <h3 style="font-size: var(--font-size-xl); margin-bottom: var(--spacing-lg);">我們的使命</h3>
         <ul style="list-style: none; display: grid; gap: var(--spacing-md);">
           <li style="display: flex; gap: var(--spacing-md); align-items: flex-start;">
-            <span style="color: var(--color-primary); font-size: var(--font-size-xl);">✓</span>
+            <span style="color: var(--color-primary); font-size: var(--font-size-xl);"><i class="ph ph-shield-check"></i></span>
             <span><strong>確保服務品質</strong>：維護長期照顧機構之服務品質，讓受照顧者獲得專業且有尊嚴的照護</span>
           </li>
           <li style="display: flex; gap: var(--spacing-md); align-items: flex-start;">
-            <span style="color: var(--color-primary); font-size: var(--font-size-xl);">✓</span>
+            <span style="color: var(--color-primary); font-size: var(--font-size-xl);"><i class="ph ph-users"></i></span>
             <span><strong>保障人員權益</strong>：保障長期照顧工作人員之勞動權益與專業發展機會</span>
           </li>
           <li style="display: flex; gap: var(--spacing-md); align-items: flex-start;">
-            <span style="color: var(--color-primary); font-size: var(--font-size-xl);">✓</span>
+            <span style="color: var(--color-primary); font-size: var(--font-size-xl);"><i class="ph ph-squares-four"></i></span>
             <span><strong>整合照護資源</strong>：健全健康照護與長期照顧服務之資源整合，提升服務效能</span>
           </li>
           <li style="display: flex; gap: var(--spacing-md); align-items: flex-start;">
-            <span style="color: var(--color-primary); font-size: var(--font-size-xl);">✓</span>
+            <span style="color: var(--color-primary); font-size: var(--font-size-xl);"><i class="ph ph-graduation-cap"></i></span>
             <span><strong>促進專業發展</strong>：促進長期照顧專業之發展，提升從業人員專業知能</span>
           </li>
           <li style="display: flex; gap: var(--spacing-md); align-items: flex-start;">
-            <span style="color: var(--color-primary); font-size: var(--font-size-xl);">✓</span>
+            <span style="color: var(--color-primary); font-size: var(--font-size-xl);"><i class="ph ph-hand-heart"></i></span>
             <span><strong>推廣社會福祉</strong>：推廣社會福祉與在地照顧理念，建構友善高齡社區</span>
           </li>
         </ul>
@@ -118,7 +118,7 @@
       <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: var(--spacing-lg); max-width: 900px; margin: 0 auto;">
         <div class="card reveal">
           <div class="card-body">
-            <div class="card-icon">📋</div>
+            <div class="card-icon"><i class="ph ph-file-text"></i></div>
             <h3 class="card-title">基本資料</h3>
             <ul style="list-style: none; font-size: var(--font-size-sm); color: var(--color-gray-600);">
               <li style="margin-bottom: var(--spacing-sm);"><strong>法人名稱：</strong>社團法人宜蘭縣長期照護及社會福祉推廣協會</li>
@@ -131,7 +131,7 @@
         
         <div class="card reveal">
           <div class="card-body">
-            <div class="card-icon">🎯</div>
+            <div class="card-icon"><i class="ph ph-crosshair"></i></div>
             <h3 class="card-title">服務範圍</h3>
             <ul style="list-style: none; font-size: var(--font-size-sm); color: var(--color-gray-600);">
               <li style="margin-bottom: var(--spacing-sm);">• 長者日間照顧服務</li>
@@ -238,6 +238,8 @@
     </div>
   </footer>
 
+  <script src="js/config.js"></script>
+  <script src="js/api.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
