--- a/services.html
+++ b/services.html
@@ -353,6 +353,8 @@
     </div>
   </footer>
 
+  <script src="js/config.js"></script>
+  <script src="js/api.js"></script>
   <script src="js/main.js"></script>
   <script>
     // Locations are now rendered by main.js
