--- a/index.html
+++ b/index.html
@@ -355,6 +355,8 @@
     </footer>
 
     <!-- Scripts -->
+  <script src="js/config.js"></script>
+  <script src="js/api.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
