fix: 修復服務據點顯示問題 - siteData 作用域修正、CSS grid 基礎樣式、恢復卡片渲染

--- a/services.html
+++ b/services.html
@@ -357,7 +357,7 @@
   <script src="js/api.js"></script>
   <script src="js/main.js"></script>
   <script>
-    // Locations are now rendered by main.js
+    // Locations are rendered by main.js
   </script>
 </body>
 </html>
