feat: SEO 優化 - 新增 robots.txt, sitemap.xml, Organization Schema

--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg" />
+
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "社團法人宜蘭縣長期照護及社會福祉推廣協會",
+      "alternateName": "宜蘭長福會",
+      "url": "https://bylmdada.github.io/changfu-web/",
+      "logo": "https://bylmdada.github.io/changfu-web/assets/icons/favicon.svg",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+886-3-958-1020",
+        "contactType": "customer service",
+        "areaServed": "TW",
+        "availableLanguage": "Chinese"
+      },
+      "sameAs": [
+        "https://www.facebook.com/changfu.org"
+      ]
+    }
+    </script>
   </head>
   <body>
     <!-- Header -->
