fix: 更新 SEO domain 為 https://www.changfu.me/

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       "@type": "Organization",
       "name": "社團法人宜蘭縣長期照護及社會福祉推廣協會",
       "alternateName": "宜蘭長福會",
-      "url": "https://bylmdada.github.io/changfu-web/",
-      "logo": "https://bylmdada.github.io/changfu-web/assets/icons/favicon.svg",
+      "url": "https://www.changfu.me/",
+      "logo": "https://www.changfu.me/assets/icons/favicon.svg",
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+886-3-958-1020",
