feat: 新增 Google Search Console 驗證碼

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       content="長期照護,長照,日照中心,失智據點,樂智據點,輔具,宜蘭,冬山,礁溪,羅東,三星"
     />
     <meta name="author" content="社團法人宜蘭縣長期照護及社會福祉推廣協會" />
+    <meta name="google-site-verification" content="yOsMmtTQ0VINIF97gEtmGWygpXs_WcWa0R_Li8bgDuY" />
 
     <!-- Open Graph -->
     <meta
