refactor: 正名為社團法人宜蘭縣長期照護及社會福祉推廣協會

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         <div class="header-inner">
           <!-- Logo -->
           <a href="index.html" class="logo">
-            <img src="assets/images/logo.png" alt="宜蘭長福會 Logo" class="logo-img" style="height: 50px; width: auto; margin-right: 10px;">
+            <img src="assets/images/logo.png" alt="社團法人宜蘭縣長期照護及社會福祉推廣協會 Logo" class="logo-img" style="height: 50px; width: auto; margin-right: 10px;">
             <div class="logo-text">
-              <span class="logo-title">宜蘭長福會</span>
+              <span class="logo-title">社團法人宜蘭縣長期照護及社會福祉推廣協會</span>
               <span class="logo-subtitle">長期照護及社會福祉推廣協會</span>
             </div>
           </a>
@@ -295,8 +295,8 @@
           <!-- Brand -->
           <div class="footer-brand">
             <div class="footer-logo">
-              <img src="assets/images/logo.png" alt="宜蘭長福會 Logo" class="footer-logo-img" style="height: 40px; width: auto; margin-right: 10px;">
-              <span class="footer-logo-text">宜蘭長福會</span>
+              <img src="assets/images/logo.png" alt="社團法人宜蘭縣長期照護及社會福祉推廣協會 Logo" class="footer-logo-img" style="height: 40px; width: auto; margin-right: 10px;">
+              <span class="footer-logo-text">社團法人宜蘭縣長期照護及社會福祉推廣協會</span>
             </div>
             <p class="footer-description">
               社團法人宜蘭縣長期照護及社會福祉推廣協會，致力於確保長照服務品質，保障照顧人員權益，推廣社會福祉與在地照顧。
