--- a/news.html
+++ b/news.html
@@ -127,9 +127,9 @@
     <div class="container">
       <div class="header-inner">
         <a href="index.html" class="logo">
-          <img src="assets/images/logo.png" alt="宜蘭長福會 Logo" class="logo-img" style="height: 50px; width: auto; margin-right: 10px;">
+          <img src="assets/images/logo.png" alt="社團法人宜蘭縣長期照護及社會福祉推廣協會 Logo" class="logo-img" style="height: 50px; width: auto; margin-right: 10px;">
           <div class="logo-text">
-            <span class="logo-title">宜蘭長福會</span>
+            <span class="logo-title">社團法人宜蘭縣長期照護及社會福祉推廣協會</span>
             <span class="logo-subtitle">長期照護及社會福祉推廣協會</span>
           </div>
         </a>
@@ -210,8 +210,8 @@
       <div class="footer-grid">
         <div class="footer-brand">
           <div class="footer-logo">
-            <img src="assets/images/logo.png" alt="宜蘭長福會 Logo" class="footer-logo-img" style="height: 40px; width: auto; margin-right: 10px;">
-            <span class="footer-logo-text">宜蘭長福會</span>
+            <img src="assets/images/logo.png" alt="社團法人宜蘭縣長期照護及社會福祉推廣協會 Logo" class="footer-logo-img" style="height: 40px; width: auto; margin-right: 10px;">
+            <span class="footer-logo-text">社團法人宜蘭縣長期照護及社會福祉推廣協會</span>
           </div>
           <p class="footer-description">社團法人宜蘭縣長期照護及社會福祉推廣協會</p>
         </div>
