--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       content="社團法人宜蘭縣長期照護及社會福祉推廣協會"
     />
     <meta
+      property="og:image"
+      content="https://www.changfu.me/assets/images/hero.png"
+    />
+    <meta property="og:site_name" content="社團法人宜蘭縣長期照護及社會福祉推廣協會" />
+    <meta
       property="og:description"
       content="專業照護、在地深耕、溫暖相伴，為宜蘭長者與家庭提供最堅實的照顧後盾。"
     />
