Resolve Duplicate Content SEO: Add canonical tag, remove duplicate sitemap entry, update internal links, and add js redirect

--- a/courses.html
+++ b/courses.html
@@ -109,7 +109,7 @@
   <header class="header" id="header">
     <div class="container">
       <div class="header-inner">
-        <a href="index.html" class="logo">
+        <a href="./" class="logo">
           <img src="assets/images/logo.png" alt="社團法人宜蘭縣長期照護及社會福祉推廣協會 Logo" class="logo-img" style="height: 50px; width: auto; margin-right: 10px;">
           <div class="logo-text">
             <span class="logo-title">社團法人宜蘭縣長期照護及社會福祉推廣協會</span>
@@ -118,7 +118,7 @@
         
         <nav class="nav-desktop">
           <ul class="nav-list">
-            <li class="nav-item"><a href="index.html" class="nav-link">首頁</a></li>
+            <li class="nav-item"><a href="./" class="nav-link">首頁</a></li>
             <li class="nav-item"><a href="about.html" class="nav-link">關於我們</a></li>
             <li class="nav-item"><a href="services.html" class="nav-link">核心業務</a></li>
             <li class="nav-item"><a href="news.html" class="nav-link">最新消息</a></li>
@@ -136,7 +136,7 @@
     
     <nav class="nav-mobile" id="navMobile">
       <ul class="nav-list">
-        <li><a href="index.html" class="nav-link">首頁</a></li>
+        <li><a href="./" class="nav-link">首頁</a></li>
         <li><a href="about.html" class="nav-link">關於我們</a></li>
         <li><a href="services.html" class="nav-link">核心業務</a></li>
         <li><a href="news.html" class="nav-link">最新消息</a></li>
@@ -152,7 +152,7 @@
     <div class="container">
       <div class="hero-content" style="max-width: 800px; margin: 0 auto;">
         <nav style="font-size: var(--font-size-sm); color: var(--color-gray-500); margin-bottom: var(--spacing-md);">
-          <a href="index.html" style="color: var(--color-gray-500);">首頁</a> / 課程訓練
+          <a href="./" style="color: var(--color-gray-500);">首頁</a> / 課程訓練
         </nav>
         <h1 class="hero-title" style="font-size: var(--font-size-4xl);">課程訓練</h1>
         <p class="hero-description">提升照護專業能力，成為長照服務的一份子</p>
