--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script>
+      // Redirect /index.html to root to avoid duplicate content
+      if (window.location.pathname.endsWith('/index.html')) {
+        window.location.replace(window.location.pathname.replace('/index.html', '/'));
+      }
+    </script>
     <meta
       name="description"
       content="社團法人宜蘭縣長期照護及社會福祉推廣協會 - 專業照護、在地深耕、溫暖相伴，為宜蘭長者與家庭提供最堅實的照顧後盾。"
@@ -13,6 +19,7 @@
     />
     <meta name="author" content="社團法人宜蘭縣長期照護及社會福祉推廣協會" />
     <meta name="google-site-verification" content="yOsMmtTQ0VINIF97gEtmGWygpXs_WcWa0R_Li8bgDuY" />
+    <link rel="canonical" href="https://www.changfu.me/" />
 
     <!-- Open Graph -->
     <meta
@@ -78,7 +85,7 @@
       <div class="container">
         <div class="header-inner">
           <!-- Logo -->
-          <a href="index.html" class="logo">
+          <a href="./" class="logo">
             <img src="assets/images/logo.png" alt="社團法人宜蘭縣長期照護及社會福祉推廣協會 Logo" class="logo-img" style="height: 50px; width: auto; margin-right: 10px;">
             <div class="logo-text">
               <span class="logo-title">社團法人宜蘭縣長期照護及社會福祉推廣協會</span>
@@ -89,7 +96,7 @@
           <nav class="nav-desktop">
             <ul class="nav-list">
               <li class="nav-item">
-                <a href="index.html" class="nav-link">首頁</a>
+                <a href="./" class="nav-link">首頁</a>
               </li>
               <li class="nav-item">
                 <a href="about.html" class="nav-link">關於我們</a>
@@ -144,7 +151,7 @@
       <!-- Mobile Navigation -->
       <nav class="nav-mobile" id="navMobile">
         <ul class="nav-list">
-          <li><a href="index.html" class="nav-link">首頁</a></li>
+          <li><a href="./" class="nav-link">首頁</a></li>
           <li><a href="about.html" class="nav-link">關於我們</a></li>
           <li><a href="services.html" class="nav-link">核心業務</a></li>
           <li><a href="news.html" class="nav-link">最新消息</a></li>
