--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
   <header class="header" id="header">
     <div class="container">
       <div class="header-inner">
-        <a href="index.html" class="logo">
+        <a href="./" class="logo">
           <img src="assets/images/logo.png" alt="社團法人宜蘭縣長期照護及社會福祉推廣協會 Logo" class="logo-img" style="height: 50px; width: auto; margin-right: 10px;">
           <div class="logo-text">
             <span class="logo-title">社團法人宜蘭縣長期照護及社會福祉推廣協會</span>
@@ -27,7 +27,7 @@
         
         <nav class="nav-desktop">
           <ul class="nav-list">
-            <li class="nav-item"><a href="index.html" class="nav-link">首頁</a></li>
+            <li class="nav-item"><a href="./" class="nav-link">首頁</a></li>
             <li class="nav-item"><a href="about.html" class="nav-link">關於我們</a></li>
             <li class="nav-item"><a href="services.html" class="nav-link">核心業務</a></li>
             <li class="nav-item"><a href="news.html" class="nav-link">最新消息</a></li>
@@ -45,7 +45,7 @@
     
     <nav class="nav-mobile" id="navMobile">
       <ul class="nav-list">
-        <li><a href="index.html" class="nav-link">首頁</a></li>
+        <li><a href="./" class="nav-link">首頁</a></li>
         <li><a href="about.html" class="nav-link">關於我們</a></li>
         <li><a href="services.html" class="nav-link">核心業務</a></li>
         <li><a href="news.html" class="nav-link">最新消息</a></li>
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="hero-content" style="max-width: 800px; margin: 0 auto;">
         <nav style="font-size: var(--font-size-sm); color: var(--color-gray-500); margin-bottom: var(--spacing-md);">
-          <a href="index.html" style="color: var(--color-gray-500);">首頁</a> / 核心業務
+          <a href="./" style="color: var(--color-gray-500);">首頁</a> / 核心業務
         </nav>
         <h1 class="hero-title" style="font-size: var(--font-size-4xl);">核心業務</h1>
         <p class="hero-description">我們提供多元的長期照顧服務，滿足長者與家庭的不同需求</p>
